RESOLVED FIXED268493
[UnifiedPDF] pdfLog() is a misnomer since it logs for the incremental loader
https://bugs.webkit.org/show_bug.cgi?id=268493
Summary [UnifiedPDF] pdfLog() is a misnomer since it logs for the incremental loader
Abrar Rahman Protyasha
Reported 2024-01-31 13:18:55 PST
PDFPluginBase::pdfLog() is a misnomer, since it logs into the `IncrementalPDF` logging channel, and represents information pertaining to the incremental loader only. Let's give this a better name.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-31 13:19:05 PST
Abrar Rahman Protyasha
Comment 2 2024-01-31 13:39:41 PST
EWS
Comment 3 2024-02-01 10:08:23 PST
Committed 273920@main (d8b27a8ef37a): <https://commits.webkit.org/273920@main> Reviewed commits have been landed. Closing PR #23615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.