[UnifiedPDF] pdfLog() is a misnomer since it logs for the incremental loader https://bugs.webkit.org/show_bug.cgi?id=268493 rdar://122038661

Reviewed by Simon Fraser.

pdfLog() can be misleading for a caller since it logs exclusively for
the incremental loader. This patch addresses this ambiguity by renaming
it to incrementalLoaderLog() instead. This method also makes the
verboseLog method a static method in the PDFPluginBase translation unit,
since it only has one caller inside PDFPluginBase::incrementalLoaderLog.

* Source/WebKit/WebProcess/Plugins/PDF/PDFIncrementalLoader.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFIncrementalLoader.mm:
(WebKit::PDFIncrementalLoader::receivedNonLinearizedPDFSentinel):
(WebKit::PDFIncrementalLoader::incrementalPDFStreamDidFinishLoading):
(WebKit::PDFIncrementalLoader::getResourceBytesAtPosition):
(WebKit::PDFIncrementalLoader::streamLoaderDidStart):
(WebKit::PDFIncrementalLoader::forgetStreamLoader):
(WebKit::PDFIncrementalLoader::requestCompleteIfPossible):
(WebKit::PDFIncrementalLoader::requestDidCompleteWithBytes):
(WebKit::PDFIncrementalLoader::requestDidCompleteWithAccumulatedData):
(WebKit::PDFIncrementalLoader::dataProviderGetBytesAtPosition):
(WebKit::PDFIncrementalLoader::dataProviderGetByteRanges):
(WebKit::PDFIncrementalLoader::threadEntry):
(WebKit::PDFIncrementalLoader::incrementalLoaderLog):
(WebKit::PDFIncrementalLoader::pdfLog): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::streamDidReceiveData):
(WebKit::PDFPluginBase::adoptBackgroundThreadDocument):
(WebKit::PDFPluginBase::receivedNonLinearizedPDFSentinel):
(WebKit::verboseLog):
(WebKit::PDFPluginBase::incrementalLoaderLog):
(WebKit::PDFPluginBase::pdfLog): Deleted.
(WebKit::PDFPluginBase::verboseLog): Deleted.

Canonical link: https://commits.webkit.org/273920@main